[workspace]
members = [
    ".",
    "xtask",
]

[workspace.dependencies]
once_cell = "1.18.0"
serde = { version = "1.0.100", features = ["derive"] }
syntect = { version = "5.1.0", default-features = false }

[package]
name = "two-face"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.64"
exclude = [
    "/.github/*",
    # We generate some large markdown files that are only linked by URL
    "/generated/*.md",
]
keywords = ["syntect", "extra", "syntaxes", "themes"]
categories = ["parser-implementations", "text-processing"]
description = "Extra syntax and theme definitions for syntect"
repository = "https://github.com/CosmicHorrorDev/two-face"
homepage = "https://github.com/CosmicHorrorDev/two-face"

[package.metadata.docs.rs]
features = ["syntect-default-onig"]

[features]
# `syntect` can't compile without a regex implementation, so we match its
# default of onig
default = ["syntect-onig"]

# A minimal set of `syntect` features with the onig regex implementation
syntect-onig = ["syntect/regex-onig"]
# A minimal set of `syntect` features with the fancy regex implementation
syntect-fancy = ["syntect/regex-fancy"]

# Toggles on `syntect`'s `default-onig` feature
syntect-default-onig = ["syntect-onig", "syntect/default-onig"]
# Toggles on `syntect`'s `default-fancy` feature
syntect-default-fancy = ["syntect-fancy", "syntect/default-fancy"]

[dependencies]
once_cell.workspace = true
serde.workspace = true

[dependencies.syntect]
workspace = true
features = ["dump-load", "parsing"]

[dev-dependencies]
strum = { version = "0.25.0", features = ["derive"] }
syntect = { workspace = true, features = ["html"] }
