[package]
name = "two-face-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.arbitrary]
version = "1.4.2"
features = ["derive"]

[dependencies.two-face]
path = ".."
default-features = false
features = ["syntect-default-fancy"]

[[bin]]
name = "patched_eq"
path = "fuzz_targets/patched_eq.rs"
test = false
doc = false
bench = false
