[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.71"
askalono = "0.4.6"
bincode = "1.3.3"
env_logger = "0.10.0"
flate2 = "1.0.26"
log = "0.4.19"
once_cell.workspace = true
serde.workspace = true
tempfile = "3.6.0"
walkdir = "2.3.3"
xshell = "0.2.3"

[dependencies.clap]
version = "4.3.9"
features = ["derive"]

[dependencies.syntect]
workspace = true
default-features = true
