[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.100"
askalono = "0.5.0"
cargo-lock.workspace = true
env_logger = "0.11.8"
flate2 = "1.1.5"
home = "0.5.12"
log = "0.4.29"
object.workspace = true
serde.workspace = true
serde_derive.workspace = true
strum.workspace = true
syntect.workspace = true
tempfile = "3.24.0"
toml.workspace = true
twox-hash.workspace = true
walkdir = "2.5.0"
xshell = "0.2.7"

[dependencies.clap]
version = "4.5.53"
features = ["derive"]

[features]
default = ["syntect-onig"]

syntect-onig = ["syntect/default-onig"]
syntect-fancy = ["syntect/default-fancy"]
